fdo#74414: No need to incremenet nRow here... It's just plain wrong.

Change-Id: Iecdbb3eba46ddf2f2bc4f2334c7d45a4e2d801c8
(cherry picked from commit 1e3ef350d730bc54a3e9c393c2df6fd1f839a3a8)
Reviewed-on: https://gerrit.libreoffice.org/7944
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>